fixed minor issue in fluid grid

--- a/Fluid-Grid/style.css
+++ b/Fluid-Grid/style.css
@@ -53,8 +53,8 @@ body {
     width: calc((100% - 2 * 2rem)/3);
 }
 
-.col-spa6n-2-of-3 {
-    width: calc(2 * (100% - 2 * 2rem)/3);
+.col-span-2-of-3 {
+    width: calc(2 * ((100% - 2 * 2rem)/3) + 2rem);
 }
 
 .col-span-1-of-4 {
@@ -62,9 +62,9 @@ body {
 }
 
 .col-span-2-of-4 {
-    width: calc(2 * (100% - 3 * 2rem)/4);
+    width: calc(2 * ((100% - 3 * 2rem)/4) + 2rem);
 }
 
 .col-span-3-of-4 {
-    width: calc(3 * (100% - 3 * 2rem)/4);
+    width: calc(3 * ((100% - 3 * 2rem)/4) + 2rem);
 }
