added loading animation component

--- a/RotatingCard/style.css
+++ b/RotatingCard/style.css
@@ -8,6 +8,10 @@ html {
     font-size: 62.5%;
 }
 
+body {
+    box-sizing: border-box;
+}
+
 .card {
     height: 30rem;
     perspective: 1200rem;
